# alanz_hackday_2013

./: .gitignore  README.md
hlearn-play/: README.md  clubs.hs  hlearn-play.cabal  main.hs  nukes-list.csv  setenv.sh
